--- a/_config.yml
+++ b/_config.yml
@@ -208,9 +208,9 @@ authors:
       - link: "https://github.com/jorgeucano"
         icon: "fa-github"
   - id: "thecouk"
-    name: "Oscar A."
+    name: "Oscar Andrade"
     url: "/blog/authors/thecouk"
-    avatar: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/authors%2F27030647.jpeg?alt=media&token=89deeacb-e02c-4176-87da-b8b8c6bcb2a5"
+    avatar: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/authors%2FImage%20uploaded%20from%20iOS%20(1).jpg?alt=media&token=f6c0d80a-893e-4b70-90f3-7843fbe3d54f"
     bio: "Web & Mobile Developer, PHP, Laravel, AJAX, Ionic, Angular, Javascript - Creo que el conocimiento es una de las pocas cosas que no se pierde cuando se comparte.
     "
     social_links:
