--- a/_config.yml
+++ b/_config.yml
@@ -162,9 +162,9 @@ authors:
     bio: "Desarrollador Web, Ingeniero de Sistemas, amante de Laravel , IonicFramework, ReactNative, PHP, manoseando Android y Swift. Amante del café y series de Netflix."
     social_links:
       - link: "https://twitter.com/calevano"
-        icon: "icon-social-octocat"
+        icon: "icon-social-twitter"
       - link: "https://www.linkedin.com/in/calevano/"
-        icon: "icon-social-octocat"
+        icon: "icon-linkedin"
       - link: "https://github.com/calevano"
         icon: "icon-social-octocat"
   - id: "mayrititis"
@@ -175,9 +175,9 @@ authors:
     bio: "Soy Ingeniera en Computación egresada de la Universidad Fermín Toro, Cabudare Edo. Lara. Me dedico al Desarrollo Web Full Stack y Móvil de manera Freelance. Me siento aficionada por el UX y el UI, así como también el desarrollo de aplicaciones innovadoras."
     social_links:
       - link: "https://twitter.com/mayrititis"
-        icon: "icon-social-octocat"
+        icon: "icon-social-twitter"
       - link: "https://www.linkedin.com/in/mayrarodriguez1709"
-        icon: "icon-social-octocat"
+        icon: "icon-linkedin"
       - link: "https://www.facebook.com/mayrititis"
         icon: "icon-social-octocat"
   - id: "unjavascripter"
