--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,9 @@ menu_header:
   - title: Cursos
     url: 'http://academia.ion-book.com/'
     target: '_blank'
+  - title: Workshops
+    url: 'http://www.startupers.io/'
+    target: '_blank'
   
 # ==============================================================
 # Menu Footer
