iniciando post, agregando desc en autores. Me quedo grande imprimir una variable :p

--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,9 @@ home:
   blog_btn_text: 'Ver más artículos'
 # ==============================================================
 # Authors
+authorpage:
+  description: 'Estos increibles tutoriales, tips y demos se logran gracias a nuestros increible autores.'
+
 authors:
   - id: 'nicobytes'
     name: Nicolas Molina
