fixing levering cache issue

--- a/firebase.json
+++ b/firebase.json
@@ -14,23 +14,17 @@
       "README.md"
     ],
     "headers": [ {
-    "source" : "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
-    "headers" : [ {
-      "key" : "Access-Control-Allow-Origin",
-      "value" : "*"
-    } ]
-    }, {
-      "source" : "**/*.@(jpg|jpeg|gif|png|js|webp)",
+      "source" : "**/*.@(jpg|jpeg|gif|png|js|webp|css)",
       "headers" : [ {
         "key" : "Cache-Control",
-        "value" : "max-age=86400"
+        "value" : "max-age=604800"
       } ]
     }, {
       // Sets the cache header for 404 pages to cache for 5 minutes
       "source" : "404.html",
       "headers" : [ {
         "key" : "Cache-Control",
-        "value" : "max-age=86400"
+        "value" : "max-age=2592000"
       } ]
     } ]
   }
