:bug: fix errors

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ menu_header:
     url: '/blog'
     target: '_self'
   - title: Cursos
-    url: 'http://academia.ion-book.com/'
+    url: 'http://www.ng-classroom.com/'
     target: '_blank'
     
 # ==============================================================
