--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ excerpt_separator: <!--summary-->
 banner_course:
   text: 'Hemos creado un increible curso de nuestra experiencia en Colombia, Chile, Bolivia y Peru.'
   btn_text: 'Ver Curso'
-  url: 'http://bootcampwithus.usefedora.com/p/curso-profesional-ionic-2-0'
+  url: 'http://www.ng-classroom.com/p/curso-profesional-ionic-2-0?ref=ionbook'
 # ==============================================================
 # Banner Slack
 banner_slack:
