--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -3,8 +3,10 @@ description: "Aprende Ionic y desarrolla increibles apps para Android y IOS."
 keywords: "ion-book,html5,javascript,mobile,ionic,hybrid,phonegap,cordova,native,ios,android,angularjs,ionic 2,angular 2,curso de ionic 2, aprender ionic 2, ionic 3, ionic framework,hacer aplicaciones con ionic,aplicaciones hibridas, angular 4"
 
 baseurl: ""
-urlblog: '/blog'
-cover: "/images/cover.jpg"
+path: "http://127.0.0.1:4000"
+url: "http://127.0.0.1:4000"
+urlblog: 'https://www.ion-book.com/blog'
+cover: "images/cover.jpg"
 
 timezone: "America/Bogota"
 
