--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,8 @@
   "lang": "es-419",
   "start_url": "/",
   "display": "standalone",
+  "gcm_sender_id": "906849912455",
+  "gcm_user_visible_only": true,
   "theme_color": "#4E8EF7",
   "background_color": "#ffffff",
   "icons": [
@@ -13,7 +15,8 @@
     },
     {
       "src": "https://www.ion-book.com/images/logo192.png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "https://www.ion-book.com/images/logo96.png",
