--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -92,6 +92,19 @@
       icon: "icon-linkedin"
     - link: "https://www.facebook.com/mayrititis"
       icon: "icon-social-octocat"
+- id: "hllauradofalco"
+  name: "Humberto Llauradó Falcó"
+  url: "/blog/authors/hllauradofalco"
+  avatar: "/images/authors/hllauradofalco.jpg"
+  bio: "Ingeniero en Ciencias Informáticas y apasionado con el desarrollo de aplicaciones tanto de escritorio, web y en los últimos meses con las aplicaciones hibridas. Disfruto mucho aprender cada día algo nuevo y compartir esos conocimientos con las personas que al igual que yo tienen el deseo de siempre seguir superándose."
+  facebook_url: 'https://www.linkedin.com/in/humberto-llaurad%C3%B3-falc%C3%B3-334129114/'
+  social_links:
+    - link: "https://twitter.com/hllauradofalco"
+      icon: "icon-social-twitter"
+    - link: "https://www.linkedin.com/in/humberto-llaurad%C3%B3-falc%C3%B3-334129114/"
+      icon: "icon-linkedin"
+    - link: "https://github.com/hllaurado"
+      icon: "icon-social-octocat"
 - id: "unjavascripter"
   name: "Diego Coy"
   url: "/blog/authors/unjavascripter"
