--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -22,6 +22,9 @@ menu_footer:
   - title: Autores
     url: '/blog/authors'
     target: '_self'
+  - title: Meetups
+    url: '/meetups/'
+    target: '_self'
   - title: Jobs
     url: 'https://jobs.ionic.io/'
     target: '_blank'
