--- a/_data/meetups.yml
+++ b/_data/meetups.yml
@@ -11,6 +11,6 @@
   cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/meetups%2Fglobal_458349563.jpeg?alt=media&token=7de43573-035f-4d6b-bd13-90b5c2b1c075"
   country: "Buenos Aires, Argentina"
 - url: "https://www.meetup.com/es-ES/Cross-Apps-Bolivia/"
-  title: "Cross Apps Costa Rica."
+  title: "Cross Apps Bolivia."
   cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/meetups%2Fglobal_458349563.jpeg?alt=media&token=7de43573-035f-4d6b-bd13-90b5c2b1c075"
-  country: "San Jose, Costa Rica"
+  country: "La Paz, Bolivia"
