picture, agregando link en meetups.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -154,7 +154,7 @@
 - id: "edyavendano"
   name: "Edy Avendaño Pacheco"
   url: "/blog/authors/edyavendano"
-  avatar: ""
+  avatar: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/authors%2F13421021.jpeg?alt=media&token=bc436720-a5e7-44ce-9441-b9f9c620e92d"
   country: "Mexico"
   bio: "Web & Mobile Developer, Java, JSF, Spring, Ionic, Angular, Javascript..
   "
