--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,5 +1,5 @@
-banner_title: "Aprende <span class='underline'>Ionic</span> y desarrolla increibles apps para Android y IOS."
-banner_text: "Hemos creado un curso integral en Videos para que aprendas todo lo necesario para enviar tus Apps al App Store."
+banner_title: "Aprende <span class='underline'>Ionic</span> y desarrolla increibles apps para Android e IOS."
+banner_text: "Dale una vuelta a tu vida aprendiendo Programación con los Tutoriales de nuestra comunidad. Sin costo."
 
 blog_title: 'Nuestro Blog'
 blog_text: 'Somos una comunidad de Ionic en español. Aprende a crear apps con HTML, CSS, JS.'
