--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -13,12 +13,12 @@ menu_header:
 # ==============================================================
 # Menu Footer
 menu_footer:
-  - title: Home
+  - title: Inicio
     url: '/'
     target: '_self'
-  - title: Blog
-    url: '/blog'
-    target: '_self'
+  - title: Cursos
+    url: 'https://www.ng-classroom.com/'
+    target: '_blank'
   - title: Autores
     url: '/blog/authors'
     target: '_self'
