--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ urlblog: '/blog'
 cover: "/images/cover.jpg"
 path: 'https://www.ion-book.com/'
 
+pwa_enabled: 0
+
 timezone: "America/Bogota"
 
 markdown: kramdown
