--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,5 +1,5 @@
 banner_title: "Aprende <span class='underline'>Ionic</span> y desarrolla increibles apps para Android e IOS."
-banner_text: "Dale una vuelta a tu vida aprendiendo Programación con los Tutoriales de nuestra comunidad. Sin costo."
+banner_text: "Crea tu primera App con Ionic. Suscribiendote a nuestro curso sin costo de una semana."
 
 blog_title: 'Nuestro Blog'
 blog_text: 'Somos una comunidad de Ionic en español. Aprende a crear apps con HTML, CSS, JS.'
