--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,7 +14,7 @@
 - id: 'nicobytes'
   name: Nicolas Molina
   url: "/blog/authors/nicobytes"
-  avatar: "http://i.imgur.com/mwT2iig.png"
+  avatar: "https://firebasestorage.googleapis.com/v0/b/nicobytes-7bea8.appspot.com/o/DSC00733.JPG?alt=media&token=2348371c-71c6-46ac-bd42-bf56e5522293"
   website: "http://nicobytes.com"
   bio: "Soy desarrollador web especializado en el área de FrontEnd & HybripApps, enfocado en aprendizaje de JS y al desarrollo de apps con Angular2 y Ionic2. Mis pasiones son el desarrollo de productos, compartir con las comunidades de desarrollo y viajar por todo el mundo."
   country: "Colombia"
