--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,4 +1,4 @@
-banner_title: "Aprende <span class='underline'>Ionic</span> y desarrolla increibles apps para Android e IOS."
+banner_title: "Desarrolla Apps para Android,IOS y PWAs con Angular."
 banner_text: "En este lugar podras encontrar. <ul><li>Tutoriales actualizados.</li><li>Hangouts con expertos.</li><li>Empoderado por la comunidad.</li><li>Hablando tu idioma.</li><ul>"
 
 blog_title: 'Nuestro Blog'
