--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,9 +1,9 @@
 # ==============================================================
 # Menu Header
 menu_header:
-  - title: Blog
-    url: '/blog'
-    target: '_self'
+#  - title: Blog
+#    url: '/blog'
+#    target: '_self'
   - title: Cursos
     url: 'https://www.ng-classroom.com/'
     target: '_blank'
