--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,7 +15,7 @@
   name: Nicolas Molina
   url: "/blog/authors/nicobytes"
   avatar: "https://firebasestorage.googleapis.com/v0/b/nicobytes-7bea8.appspot.com/o/DSC00733.JPG?alt=media&token=2348371c-71c6-46ac-bd42-bf56e5522293"
-  website: "http://nicobytes.com"
+  website: "http://nicobytes.github.io/"
   bio: "Soy desarrollador web especializado en el área de FrontEnd & HybripApps, enfocado en aprendizaje de JS y al desarrollo de apps con Angular2 y Ionic2. Mis pasiones son el desarrollo de productos, compartir con las comunidades de desarrollo y viajar por todo el mundo."
   country: "Colombia"
   facebook_url: 'https://www.facebook.com/nicobytes'
