--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -25,6 +25,9 @@ menu_footer:
   - title: Meetups
     url: '/meetups/'
     target: '_self'
+  - title: Podcast
+    url: 'https://itunes.apple.com/us/podcast/ng-podcast/id1235127090?l=es&mt=2'
+    target: '_blank'
   - title: Jobs
     url: 'https://jobs.ionic.io/'
     target: '_blank'
