--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,5 +1,5 @@
 banner_title: "Desarrolla Apps para Android,IOS y PWAs con Angular."
-banner_text: "En este lugar podras encontrar. <ul><li>Tutoriales actualizados.</li><li>Hangouts con expertos.</li><li>Empoderado por la comunidad.</li><li>Hablando tu idioma.</li><ul>"
+banner_text: "En este lugar podras encontrar. <ul><li>Tutoriales actualizados.</li><li>Versiones utilizadas en cada post.</li><li>Hangouts con expertos.</li><li>Empoderado por la comunidad.</li><li>Hablando tu idioma.</li><ul>"
 
 blog_title: 'Nuestro Blog'
 blog_text: 'Somos una comunidad de Ionic en español. Aprende a crear apps con HTML, CSS, JS.'
