--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ion-book",
-  "short_name": "ion-book",
+  "name": "ng-classroom",
+  "short_name": "ng-classroom",
   "lang": "es-419",
   "start_url": "/",
   "display": "standalone",
@@ -10,20 +10,20 @@
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "https://www.ion-book.com/images/logo512.png",
+      "src": "https://blog.ng-classroom.com/images/logo512.png",
       "sizes": "512x512"
     },
     {
-      "src": "https://www.ion-book.com/images/logo192.png",
+      "src": "https://blog.ng-classroom.com/images/logo192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://www.ion-book.com/images/logo96.png",
+      "src": "https://blog.ng-classroom.com/images/logo96.png",
       "sizes": "96x96"
     },
     {
-      "src": "https://www.ion-book.com/images/logo48.png",
+      "src": "https://blog.ng-classroom.com/images/logo48.png",
       "sizes": "48x48"
     }
   ]
