agregando link de organizadores.

--- a/_data/meetups.yml
+++ b/_data/meetups.yml
@@ -6,8 +6,8 @@
   title: "Cross Apps Chile."
   cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/meetups%2Fglobal_458349563.jpeg?alt=media&token=7de43573-035f-4d6b-bd13-90b5c2b1c075"
   country: "Santiago,Chile"
-- url: "https://www.meetup.com/es-ES/Cross-Apps-Argentina/"
-  title: "Cross Apps Argentina."
+- url: "https://www.meetup.com/es-ES/NG-BAIRES/"
+  title: "Cross Apps Argentina. [NG-BAIRES]"
   cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/meetups%2Fglobal_458349563.jpeg?alt=media&token=7de43573-035f-4d6b-bd13-90b5c2b1c075"
   country: "Buenos Aires, Argentina"
 - url: "https://www.meetup.com/es-ES/Cross-Apps-Bolivia/"
