Nuevo Post! + general fixes

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -34,7 +34,7 @@ banner_slack:
 
 # Banner Hnagouts
 banner_hangouts:
-  title: 'No te pierdas nuestro proximo ion-hangout'
+  title: 'No te pierdas nuestro proximo Ng-hangout'
   text: 'Cada dos semanas invitamos a un amigo de la comunidad para hablar desde sus experiencia en estos tiempos emocionantes.'
   url: 'https://www.youtube.com/channel/UCxs-DaSRmp8k23n79WjXndw?sub_confirmation=1'
   btn_text: 'Ir'
