--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -7,6 +7,9 @@ menu_header:
   - title: Cursos
     url: 'https://www.ng-classroom.com/'
     target: '_blank'
+  - title: Foro
+    url: 'https://disqus.com/home/forum/ionbook/'
+    target: '_blank'
 # - title: Talleres
 #   url: 'https://startupers.ng-classroom.com/'
 #   target: '_blank'
@@ -30,8 +33,11 @@ menu_footer:
   - title: Podcast
     url: 'https://itunes.apple.com/us/podcast/ng-podcast/id1235127090?l=es&mt=2'
     target: '_blank'
+  - title: Foro
+    url: 'https://disqus.com/home/forum/ionbook/'
+    target: '_blank'
   - title: Jobs
-    url: 'https://jobs.ionic.io/'
+    url: 'https://angularjobs.com/'
     target: '_blank'
   - title: Codigo de Conducta
     url: 'https://github.com/ion-book/codigo-de-conducta'
