Adding google tag manager and Google CSE

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,9 @@ path: 'https://blog.ng-classroom.com/'
 pwa_enabled: 0
 ads_enabled: 0
 push_notifications: 1
-google_optimize: 0
+google_optimize: 1
+google_cse: 1
+google_tagmanager: 1
 
 timezone: "America/Bogota"
 
